body home scrollbar fix

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -18,6 +18,7 @@ body {
 	font-style: normal;
 	line-height: 1;
 	color: $text-medium-color;
+	&.scroll-fix { overflow: hidden; }
 }
 
 
